--- a/.github/workflows/event-details.yml
+++ b/.github/workflows/event-details.yml
@@ -1,5 +1,10 @@
 name: Events in Details
-on: ...
+on:
+  pull_request:
+    types:
+      - opened
+  workflow_dispatch:
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
